dist/LineScript-win64-20260616/tests/cases/compile_fail/generic_numeric_bad_types.lsc
main() -> i64 do
  println(max("x", 1))
  return 0
end
